fix title spacing

--- a/src/content-handlers/iiif/modules/uv-openseadragoncenterpanel-module/css/styles.less
+++ b/src/content-handlers/iiif/modules/uv-openseadragoncenterpanel-module/css/styles.less
@@ -8,6 +8,7 @@
 
     .controlsContainer {
       position: absolute;
+      top: @panel-margin;
       left: @panel-margin;
       z-index: 100;
       display: none;
